[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/powens_firefly"]

[project]
name = "powens-firefly"
authors = [
  { name="Jules Anderson" },
]
description = "Package to transfer transactions from Powens to Firefly III."
version = "2025.0.0"
requires-python = ">= 3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "pyyaml",
    "powens",
    "Firefly-III-API-Client",
]

[project.urls]
Homepage = "https://github.com/Azurennn/powens-firefly"
Issues = "https://github.com/Azurennn/powens-firefly/issues"

[project.scripts]
powens-firefly = "powens_firefly.__main__:main"
